# ChangeLog for media-gfx/blockdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Jun 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.8.1.ebuild:
  Keyworded amd64.

  08 Jun 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.7.7.ebuild,
  blockdiag-0.8.0.ebuild:
  Keyworded x86.

  07 Jun 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.8.0.ebuild:
  Keyworded amd64.

*blockdiag-0.8.1 (16 May 2011)

  16 May 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.8.1.ebuild:
  Version bump [366].

*blockdiag-0.8.0 (09 May 2011)

  09 May 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.8.0.ebuild:
  Version bump [356].

  06 May 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.7.3.ebuild,
  blockdiag-0.7.7.ebuild:
  Keyworded x86.

  06 May 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.7.0.ebuild:
  Removed obsolete version.

  06 May 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.7.7.ebuild:
  Keyworded amd64.

*blockdiag-0.7.7 (06 Apr 2011)

  06 Apr 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.7.7.ebuild:
  Version bump [307].

  04 Apr 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.7.3.ebuild:
  Keyworded x86.

  04 Apr 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.7.3.ebuild:
  Keyworded amd64.

  01 Apr 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.6.7.ebuild,
  blockdiag-0.7.0.ebuild:
  Keyworded x86.

  01 Apr 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.7.0.ebuild:
  Keyworded amd64.

  23 Mar 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.6.2.ebuild,
  blockdiag-0.6.7.ebuild:
  Keyworded x86.

  22 Mar 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.6.7.ebuild:
  Keyworded amd64.

*blockdiag-0.7.3 (04 Mar 2011)

  04 Mar 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.7.3.ebuild:
  Version bump [300].

*blockdiag-0.7.0 (01 Mar 2011)

  01 Mar 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.7.0.ebuild:
  Version bump [291].

*blockdiag-0.6.7 (17 Feb 2011)
