@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST blockdiag-0.8.0.tar.gz 106538 RMD160 fde323ccf885fa00ec3d31e21e9fdf1fc756b7fc SHA1 076a3f70d63c9a73d65d35c90712d80d5280c7f9 SHA256 27c4021c78fb5ab8d301391b78740ef02e5ffc416ad65b38e9edbfb7d9d9124b
 DIST blockdiag-0.8.1.tar.gz 111706 RMD160 8832e9b9e53237bbe0cd6a3a473c92e3c015fc75 SHA1 c256918e5dee6dbe88992eecf2b471e181b1dec4 SHA256 e6a40e1a30459cd315cf9603334a0786a1d9bc4fad7e64bb0932cc46796d4271
-EBUILD blockdiag-0.8.0.ebuild 931 RMD160 9dc02a61bc25600f2f3c14c3039104d18accf1f4 SHA1 90a7c471faa7674e927609353f87999b71ffd04d SHA256 d17ee95b717d74b0a2089bf516bb6f2e99bcda89bdc685861f4b7221ab99b197
-EBUILD blockdiag-0.8.1.ebuild 935 RMD160 5e7d00004679a4b37d896bc7d711ea46c56bda7b SHA1 aa15dc8fd2e4b91ecd41dc97da0510daf7928a47 SHA256 158774c8ce5ccc2acbd1fef545940523ba8837475dd17e0d47d1ffbc9f490692
-MISC ChangeLog 3949 RMD160 1d6e72b59b4c13925c2df89f0ec4b8a407c87814 SHA1 391a3316ed42703f1ab4dbec83bdd08ce5756425 SHA256 aec29838f0f93ea444a6239bf70dfc98907309485c8f682e0f45fbfec01410e5
+EBUILD blockdiag-0.8.1.ebuild 934 RMD160 7de59de85b83a94c26a1780d13501e2fbc6cbe21 SHA1 13bb3400710b85e8bacef53cd6cde97c04581fb1 SHA256 6643da6564d51c6c10e30fc996d0a86c8577f16a140a591735fa90a4b00bbd36
+MISC ChangeLog 4063 RMD160 1755e5a352db598023b82905c1266d74d99bd25b SHA1 3e75b29b4cd6fba264e1f269a5d52c9b0009a265 SHA256 0b2d4152cf76366d846d8a2464c04a129aed22fd6e476d18315ab36e21b0e34c
 MISC metadata.xml 669 RMD160 dcb67ada7b260b3ce4d5b5ec3f66ce2193ea2413 SHA1 22302b9b620dfb15f8c13137c866a5ac587e86e9 SHA256 24d91965daa15b89c7a8fa1e6eefaa6d459645d881cd67a1738198253cebd533
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk34YdEACgkQzJrj3cAXR0l/UgCeMiiT0HDzdZdHFbDr8jhBxd7a
-JNcAmwYGM06+2B25Pl++T/FjT8Oc8pNK
-=5XM9
+iEYEARECAAYFAk34asYACgkQzJrj3cAXR0kECQCfeE/0wLAjdDqL/s70BhVAF9NB
+pDgAoJwoZyyaHYu6NPjeGnFehnmeTZBp
+=1KMo
 -----END PGP SIGNATURE-----
