@@ -6,7 +6,7 @@ mirror://pypi/b/blockdiag/blockdiag-0.8.1.tar.gz
 http://pypi.python.org/pypi/blockdiag/
 Apache-2.0
 Generate block-diagram image files from text(like dot)
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 examples pdf
 
